--- a/Taylr/UserInterface/Profile/Profile.storyboard
+++ b/Taylr/UserInterface/Profile/Profile.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ENh-8K-eqg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
@@ -668,6 +668,9 @@
                                 <state key="normal" title="12:11:32" image="ic-video-small">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="1iL-Ge-fca" kind="show" id="Jjv-Cn-8As"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -697,6 +700,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j6V-oe-MrP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="366.5" y="3304"/>
+        </scene>
+        <!--Conversation-->
+        <scene sceneID="EHk-qG-gqU">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Conversation" referencedIdentifier="Conversation" id="1iL-Ge-fca" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jeC-of-evo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="366" y="4069"/>
         </scene>
     </scenes>
     <resources>
